--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
-<h1>hejjjjjj :3</h1>
 
-<img src="goodman (2).png"> 
-<p id="p1"></p>
+
+!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Javascript</title>
+
+</head>
+<body>
 <script>src="test1.js"</script>
+  <h1>hejjjjjj :3</h1>
+  <img src="goodman (2).png"> 
+  <p id="p1"></p>
+</body>
+
+</html>
