--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-<script>src="test1.js"</script>
+<script src="test1.js"></script>
   <h1>hejjjjjj :3</h1>
   <img src="goodman (2).png"> 
   <p id="p1"></p>
